testsuite/bsc.interra/messages/EBadIfcType/EBadIfcType_context.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EBadIfcType_context.bs
Error: "EBadIfcType_context.bs", line 21, column 0: (T0043)
  Bad top level type: has context: (Prelude.Bits a sa, Prelude.Arith a) =>
  Prelude.Module (Prelude.Reg a)
